<?xml version="1.0"?>
<package format="2">
  <name>traversability_mapping</name>
  <version>0.0.0</version>
  <description>The traversability_mapping package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jiajie@todo.todo">jiajie</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>elevation_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ros_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>elevation_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>ros_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>elevation_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>ros_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <build_export_depend>grid_map_core</build_export_depend>
  <build_depend>grid_map_core</build_depend>
  <exec_depend>grid_map_core</exec_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
